# browser-use-internal

./: simple_test.py  test_company_extraction.py  test_openfunnel.py  test_universal_gtm.py
browser_use/: gtm_agent.py  simple_gtm_agent.py
browser_use/agent/: system_prompt_gtm.md
browser_use/tools/: planner_tool.py  simple_tools.py  smart_pagination.py  views.py
gtm_agent/: README.md  pyproject.toml
gtm_agent/gtm_agent/: __init__.py  cli.py  config.py  extraction.py  orchestrator.py  playwright_session.py
gtm_agent/gtm_agent.egg-info/: PKG-INFO
gtm_agent/gtm_agent/llm/: __init__.py  anthropic.py  base.py  prompts.py  types.py
gtm_agent/gtm_agent/planners/: __init__.py  llm.py
gtm_agent/gtm_agent/tools/: __init__.py  actions.py  dom.py  extraction.py  interaction.py  observation.py
gtm_agent/tests/: __init__.py  sample_page.html  test_config.py  test_end_to_end.py  test_extraction.py  test_llm_clients.py  test_orchestrator.py  test_planner.py  test_playwright_tools.py
openfunnel_browser/: README.md  __init__.py
openfunnel_browser/agent/: __init__.py  gtm_agent.py
openfunnel_browser/browser/: __init__.py  session.py
openfunnel_browser/llm/: __init__.py  anthropic.py  base.py  openai.py
openfunnel_browser/tools/: __init__.py  gtm_tools.py  planner.py
