[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gtm-agent"
version = "0.1.0"
description = "GTM-focused browser agent for extracting company names."
authors = [{name = "AutoBuilder", email = "autobuilder@example.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.17.0",
    "httpx>=0.25",
    "playwright>=1.43.0,<2.0",
    "pydantic>=2.5",
    "python-dotenv>=1.0",
    "structlog>=23.1",
    "tenacity>=8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
]

[tool.pytest.ini_options]
addopts = "-rs"
testpaths = ["tests"]
